Release 2.8.1
=============

Bugs Fixed
----------

- Trying to install rpy2 while R is not in the `PATH` resulted in an error
  in `setup.py`.
  

Release 2.8.0
=============

New features
------------

- New class :class:`rpy2.robjects.SourceCode`. The class extends Python's
  :class:`str` and is meant to represent R source code. An HTML
  renderer for the ipython notebook (syntax highlighting using
  :mod:`pygment` is also added).
  
- New module :mod:`rpy2.robjects.lib.tidyr` providing a custom
  wrapper for the R library `tidyr`

- The long-deprecated functions :func:`rpy2.rinterface.set_writeconsole` and
  :func:`rpy2.rinterface.get_writeconsole` are no longer available. One of
  :func:`rpy2.rinterface.set_writeconsole_regular` / :func:`rpy2.rinterface.set_writeconsole_warnerror`
  or :func:`rpy2.rinterface.get_writeconsole_regular` / :func:`rpy2.rinterface.get_writeconsole_warnerror`
  respectively should be used instead.
  
- The attribute :attr:`rpy2.robjects.RObject.slots` can now be implictly interated on
  (the method :meth:`__iter__` is now an alias for :meth:`keys`).

- The default Python-R conversion is now handling functions. This means that
  Python function can directly be used as parameters to R functions (when
  relevant).

- Ipython display hook `display_png` for ggplot2 graphics.

- :mod:`pandas` "category" vectors are better handled by the pandas conversion.

- New module :mod:`rpy2.robjects.lib.grdevices` providing a custom
  wrapper for the R library 'grDevices', exposing few key functions in
  the package and providing context managers (`render_to_file` and
  `render_to_bytesio`) designed to simplify the handling of static plots
  (e.g., webserver producing graphics on the fly or figure embedded in a
  Jupyter notebook).

- Numpy conversion is handling better arrays with `dtype` equal to `"O"`
  when all objects are either all inheriting from :class:`str` or from
  :class:`bytes`. Such arrays are now producing :class:`StrSexpVector` or